# OK1Newsbot

./: Dockerfile  README.md  add_new_users_to_group.py  config.py  entrypoint.sh  main.py  pyproject.toml  redeploy.sh
